--- a/travis.yml
+++ b/travis.yml
@@ -1,55 +1,21 @@
-# trabajamos con javascript
-language: node_js
-# os: osx
-# hay mas configuraciones
-git:
-  # 3 niveles de git
-  depth: 3
-
-branches:
-  # branches que no queremos implementar
-  except:
-  - legacy
-  - experimental
-
-branches:
-  # solo las ramas que queremos
-  only:
-  - master
-  - stable
-
-before_install: #antes de hacerlo
-  - python
-
-install:
-  - yarn install
-# - apt install curl
-
-script:
-  - yarn deploy
-  - yarn test
-
-before_script:
-  - clean
-
-after_script:
-  - yarn clean
-
+lenguage: node_js
 cache:
   directories:
-    - node_modules # mantener en cache node_modules
-
-jobs:
-  include:
-    - stage: test
-      script: yarn test
-      script: yarn eslint
-    - stage: deploy
-      script: yarn deploy
-
-# deploy github page y heroku
-
+    - node_modules
+    - ~/.npm
+node_js:
+  - '12'
+git:
+  depth: 3
+script:
+  - yarn build
 deploy:
-  provider: heroku
-  on
-    repo: JuanTorchia/platzi-store
+  provider: pages
+  skip_cleanup: true
+  keep_history: true
+  github_token: $GITHUB_TOKEN
+  local_dir: dist/
+  target_branch: gh-page
+  commit_message: 'Deploy del proyecto'
+  on:
+    branch: master
