--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,12 @@ git:
   depth: 3
 script:
   - yarn build
+notifications:
+  email:
+    recipients:
+      - j.s.torchia@gmail.com
+    on_success: always
+    on_failure: always
 deploy:
   provider: pages
   skip_cleanup: true
